css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cardo&family=Inter&family=Montserrat&family=Roboto&family=Georama&display=swap');

:root {
    /* colors */
    --red: #F05454;
    --blue: #0E49B5;
    --grey: #DDDDDD;
    --white: #FFFFFF;
    --bluegrey: #DAE2EA;
    --darkgrey: #676363;
    --graylighter: #757373;
    --screengerey: #1c1c1c;
    --darkblue: #3B3E66;
    --green: #1BC943;
    --black: #161617;
    --lightblue: #EAF6FF;
    --yellow: #ffb405;
    --orange: #f56900;
    --secondary-text: #86868b;

    /* gradient */
    --bar-loaded: linear-gradient(90deg, rgba(255, 228, 105, 1) 0%, rgba(236, 200, 99, 1) 34%, rgba(251, 139, 0, 1) 86%)
}

@font-face {
    font-family: "phoneFont";
    src: url("../media/fonts/SFProText-Regular.ttf");
}

@font-face {
    font-family: appleFontBold;
    src: url("../media/fonts/SFProText-Bold.ttf");
}

:active,
:hover,
:focus {
    outline: 0;
    outline-offset: 0;
}

body {
    margin: 0;
    font-family: phoneFont;
    font-size: 18px;
    line-height: 1.4;
    color: var(--secondary-text);
    font-weight: normal;
    background-color: var(--black);
    -ms-overflow-style: none;
    scrollbar-width: none;
}

/* body.lighted {
    color: var(--orange);
} */

body::-webkit-scrollbar {
    display: none;
}

html {
    box-sizing: border-box;
    height: 100%;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

.plug{
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: var(--black);
    z-index: 100;
}

.plug .bar{
    width: 100%;
    height: 10px;
}

.plug .bar .loaded{
    height: 10px;
    background-color: var(--lightblue);
}

.plug.loaded{
    animation: 2s linear 0s plug-transition;
    opacity: 0;
}

@keyframes plug-transition {
    from {
        opacity: 1;
    }

    to {
        opacity: 0;
    }
}

.wrapper {
    width: 100%;
    overflow: hidden;
    position: relative;

}

img {
    width: 100%;
    vertical-align: top;
}

p {
    margin: 0 0 10px;
}

a {
    color: var(--blue);
    text-decoration: none;
    font-family: 'Roboto', serif;
}

a:hover {
    opacity: .7;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: appleFontBold;
    font-style: normal;
    font-weight: 600;
}


h1 {


    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 8rem;
    line-height: 155px;
    text-align: center;
    text-transform: uppercase;
    background: radial-gradient(178.71% 178.71% at 50.04% 148.39%, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;

    text-transform: uppercase;
    text-align: center;
}

h1.lighted{
    background: radial-gradient(178.71% 178.71% at 50.04% 148.39%, var(--orange) 0%, rgba(255, 255, 255, 0) 100%);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: var(--black);
    align-items: center;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 10;
    font-family: 'appleFontBold';
}

.header .container {
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 10px;
    background-color: var(--black);
    align-items: center;
    position: relative;
    top: 0;
    width: 90%;
    max-width: 1400px;
    z-index: 10;
    font-family: 'appleFontBold';
}

.header .title {
    padding: 0 0 0 10px;
}

.header .notify {
    background-color: var(--white);
    color: var(--black);
    border-radius: 20px;
    padding: 5px 20px;
    border: none;
}

header {
    position: inherit;
    height: 150vh;
}

.candle-section-head {
    position: relative;
    height: 100vh;
    top: -45vh;
    z-index: 3;
}

.candle-section-head .logo {
    position: absolute;
    height: 567px;
    width: 567px;
    right: 0;
    top: 40%;
}


.candle-section-head .logo.in {
    animation-duration: 1s;
    animation-iteration-count: 1;
    animation-fill-mode: both;
    animation-timing-function: linear;
    animation-name: headerLogoIN;
}

.candle-section-head .logo.out {
    animation-name: headerLogoOUT;
    opacity: 0;
}


.step.element-show {
    opacity: 1;
    transition: all 0s;
}


.wix {
    width: 100px;
    height: 60vh;
    position: absolute;
    z-index: 5;
    left: 50%;
    margin-left: -50px;
    bottom: 100px;
    opacity: 1;
}


.candle-text {
    position: absolute;
    width: 200px;
    bottom: 10vh;
    left: 10vh;
    opacity: 0;
}


.section-steps {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    min-height: 100vh;
    height: auto;
    z-index: 2;
    background-color: var(--black);

    scroll-snap-align: start;
    scroll-margin: 0px;

}

.step {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 325px;
    text-align: center;
}

.step span {
    opacity: 0;
    font-size: 32px;
    font-weight: 600;
    color: var(--white);
}

.step .step-content {
    opacity: 0;
    font-size: 24px;
}

.light-container {
    height: 35vh;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


.light {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    opacity: 0;
}

.light.outer {
    height: 30vh;
    width: 30vh;
    background: radial-gradient(52.43% 52.43% at 49.83% 50.17%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.02) 100%)
}

.light.middle {
    height: 23vh;
    width: 23vh;
    background: radial-gradient(52.69% 52.69% at 49.77% 50%, rgba(255, 255, 255, 0.18) 0%, rgba(217, 217, 217, 0.03) 100%)
}
/* ... */

